# bearcat

./: .gitignore  .travis.yml  Cargo.toml  buildspec.yml
.github/: README.md
.github/workflows/: rust-dev.yml  rust-prod.yml  rust.yml
resources/: bearcat-user.yml  bearcat.service  bearcat.yaml  bearcat_bucket_sync.yml  initial_role_setup.sh  list_bucket_response  setup.sh  test.txt
src/: bucket.rs  cli.yml  credentials.rs  data.rs  main.rs  objects.rs
workflows/: cargo.groovy
