[package]
name = "bearcat"
version = "0.1.0"
authors = ["Christopher O'Brian <mobiletread@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-beta.1", git = "https://github.com/clap-rs/clap.git", branch = "master", features = ["yaml"]}
yaml-rust = {version = "0.4.3"}
rusoto_credential = "0.42.0"
rusoto_core = "0.42.0"
rusoto_sts = "0.42.0"
rusoto_s3 = "0.42.0"
futures = "0.1.29"
bytes = "0.4.12"
